# PlexTraktSync

./: .envrc  CONTRIBUTING.md  Dockerfile  Pipfile  entrypoint.sh  pyproject.toml  renovate.json  requirements.pipenv.txt  requirements.txt  setup.bat  setup.cfg
.github/workflows/: docker-publish-latest.yml  docker-publish-main.yml
plextraktsync/decorators/: retry.py
plextraktsync/trakt/: ScrobblerProxy.py
plextraktsync/watch/: WatchStateUpdater.py
