[project]
name = "PlexTraktSync"
dynamic = ["version"]
description = "Plex-Trakt-Sync is a two-way-sync between trakt.tv and Plex Media Server"
readme = "README.md"
license = {file = "LICENSE"}
# See: https://pypi.python.org/pypi?:action=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Environment :: Console",
  "Operating System :: OS Independent",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # List of Python versions and their support status:
  # https://en.wikipedia.org/wiki/History_of_Python#Support
  # https://endoflife.date/python
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "apluggy==1.1.2; python_version >= '3.10'",
    "attrs==26.1.0; python_version >= '3.9'",
    "cattrs==26.1.0; python_version >= '3.10'",
    "certifi==2026.2.25; python_version >= '3.7'",
    "charset-normalizer==3.4.6; python_version >= '3.7'",
    "click==8.3.1; python_version >= '3.10'",
    "decorator==5.2.1; python_version >= '3.8'",
    "deprecated==1.2.18,<1.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "exceptiongroup==1.3.1; python_version >= '3.7'",
    "humanize==4.15.0; python_version >= '3.10'",
    "idna==3.11; python_version >= '3.8'",
    "inquirerpy==0.3.4",
    "markdown-it-py==4.0.0; python_version >= '3.10'",
    "mdurl==0.1.2; python_version >= '3.7'",
    "oauthlib==3.3.1; python_version >= '3.8'",
    "pfzy==0.3.4",
    "platformdirs==4.9.4; python_version >= '3.10'",
    "plexapi==4.18.1; python_version >= '3.10'",
    "pluggy==1.6.0; python_version >= '3.9'",
    "prompt-toolkit==3.0.52; python_version >= '3.8'",
    "pygments==2.19.2; python_version >= '3.8'",
    "python-dotenv==1.2.2; python_version >= '3.10'",
    "python-git-info==0.8.3",
    "pytimeparse==1.1.8",
    "pytrakt==4.2.3",
    "pyyaml==6.0.3; python_version >= '3.8'",
    "requests==2.33.0; python_version >= '3.10'",
    "requests-cache==1.3.1; python_version >= '3.8'",
    "requests-oauthlib==2.0.0; python_version >= '3.4'",
    "rich==14.3.3; python_full_version >= '3.8.0'",
    "six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'",
    "tqdm==4.67.3; python_version >= '3.7'",
    "types-decorator==5.2.0.20251101; python_version >= '3.9'",
    "typing-extensions==4.15.0; python_version >= '3.9'",
    "url-normalize==2.2.1; python_version >= '3.8'",
    "urllib3==2.6.3; python_version >= '3.9'",
    "wcwidth==0.6.0; python_version >= '3.8'",
    "websocket-client==1.9.0; python_version >= '3.9'",
    "wrapt==2.1.2,<2.2.0; python_version >= '3.8'",
]

[tool.setuptools.dynamic]
version = {attr = "plextraktsync.__version__"}

[project.urls]
Homepage = "https://github.com/Taxel/PlexTraktSync"
Repository = "https://github.com/Taxel/PlexTraktSync.git"
Issues = "https://github.com/Taxel/PlexTraktSync/issues"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "plextraktsync",
    "plextraktsync.commands",
    "plextraktsync.config",
    "plextraktsync.decorators",
    "plextraktsync.logger",
    "plextraktsync.media",
    "plextraktsync.mixin",
    "plextraktsync.factory",
    "plextraktsync.plan",
    "plextraktsync.plex",
    "plextraktsync.plex.guid",
    "plextraktsync.plex.guid.provider",
    "plextraktsync.plugin",
    "plextraktsync.queue",
    "plextraktsync.rich",
    "plextraktsync.sync",
    "plextraktsync.sync.plugin",
    "plextraktsync.trakt",
    "plextraktsync.util",
    "plextraktsync.watch",
]

[project.scripts]
plextraktsync = "plextraktsync.cli:cli"

[tool.ruff]
# https://docs.astral.sh/ruff/settings/#line-length
line-length = 150

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
# https://docs.astral.sh/ruff/settings/#lint_extend-select
extend-select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
extend-ignore = [
    # Not safe changes
    "SIM102",
    "SIM103",
    # TODO
    "SIM108",
    "B019", # Concious decision
    "B904", # Haven't figured out which one to use
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lint_isort_required-imports
required-imports = ["from __future__ import annotations"]
